--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        Library
+        <button>Add book</button>
+    </header>
+    <main>
+    </main>
+    <footer>
+
+        <p>
+            Copyright ©
+        <script>  document.write(new Date().getFullYear())</script>
+        Ritish Kandel
+        </p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
