--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         <button>Add book</button>
     </header>
     <main>
+        <form action="POST" method="#">
+            <div class="form-row">
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title">
+            </div>
+
+            <div class="form-row">
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="author">
+            </div>
+
+            <div class="form-row">
+                <label for="pages">Pages:</label>
+                <input type="number" id="pages" name="pages">
+            </div>
+
+            <div class="form-row">
+                <label for="read">Read:</label>
+                <input type="checkbox" id="read" name="read">
+            </div>
+        </form>
     </main>
     <footer>
 
