functionality to add book button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         Library
-        <button>Add book</button>
+        <button class="addbook">Add book</button>
     </header>
     <main>
         <form action="POST" method="#">
