--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         Ritish Kandel
         </p>
     </footer>
+    <div class="overlay"></div>
     <script src="script.js"></script>
 </body>
 </html>
