styling to the buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         Library
-        <button class="addbook">Add book</button>
+        <button class="openForm">Add book</button>
     </header>
     <main>
         <form action="POST" method="#">
@@ -32,6 +32,10 @@
             <div class="form-row">
                 <label for="read">Read:</label>
                 <input type="checkbox" id="read" name="read">
+            </div>
+            <div class="form-row">
+                <div class="align-button"></div>
+                <button class="addBook" type="reset">Submit</button>
             </div>
         </form>
     </main>
