--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="number" id="pages" name="pages">
             </div>
 
-            <div class="form-row">
+            <div class="form-row special">
                 <label for="read">Read:</label>
                 <input type="checkbox" id="read" name="read">
             </div>
