structure for card added and also styled

--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@
 </head>
 <body>
     <header>
-        Library
+        <h1>Library</h1>
         <button class="openForm">Add book</button>
     </header>
     <main>
+        <div class="card-container">
+            <div class="card">
+                <h3>Title:</h3>
+                <p>Shoe Doajkdslfjklasjklfjsasdfsdfg</p>
+                <h3>Author:</h3>
+                <p>Phil Knight</p>
+                <h3>Pages:</h3>
+                <p>365</p>
+                <h3>Read:</h3>
+                <input type="checkbox" checked>
+            
+                <button class="removeBook">Remove</button>
+            </div>
+            
+        </div>
+
+
         <form action="POST" method="#">
             <div class="form-row">
                 <label for="title">Title:</label>
