values gathered from forms and added to myLibrary array adding the values from myLibrary array to the dom will be the next step

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h3>Pages:</h3>
                 <p>365</p>
                 <h3>Read:</h3>
-                <input type="checkbox" checked>
+                <input type="checkbox" cardRead checked>
             
                 <button class="removeBook">Remove</button>
             </div>
