input validation added on javascript, further changes to css and html needed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="form-row">
                 <div class="align-button"></div>
-                <button class="addBook" type="reset">Submit</button>
+                <button class="addBook" type="reset" disabled>Submit</button>
             </div>
         </form>
     </main>
