--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
             <div class="form-row">
                 <label for="title">Title:</label>
                 <input type="text" name="title" id="title">
-                <p class="error error-title">Title must be between 1 and 500 characters</p>
+                <p class="error error-title error-active">*must be between 1 and 500 characters</p>
             </div>
 
             <div class="form-row">
                 <label for="author">Author:</label>
                 <input type="text" id="author" name="author">
-                <p class="error error-title">Author must be between 1 and 20 characters</p>
+                <p class="error error-author">*must be between 1 and 100 characters</p>
 
             </div>
 
             <div class="form-row">
                 <label for="pages">Pages:</label>
                 <input type="number" id="pages" name="pages">
-                <p class="error error-title">Must only be upto 5 digits</p>
+                <p class="error error-pages">*must only be upto 5 digits</p>
 
             </div>
 
