refactor to add classes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="form-row">
                 <label for="title">Title:</label>
                 <input class='input' type="text" name="title" id="title">
+                <!-- change naming convention to camelcase in html and css -->
                 <p class="error error-title">*must be between 1 and 500 characters</p>
             </div>
 
